[package]
edition = "2021"
name = "farm_cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {workspace = true}
napi-derive = {workspace = true}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
